# properconf

./: .travis.yml  LICENSE  Makefile  README.md  mm.py  pyproject.toml  setup.cfg  tox.ini
proper_config/: __init__.py  cli.py  configdict.py  defaults.py  secrets.py  version.py
properconf/: __init__.py  cli.py  configdict.py  defaults.py  main.py  secrets.py  version.py
tests/: conftest.py  test_configdict.py  test_main.py  test_secrets.py  test_setup.py
