[tool.poetry]
name = "properconf"
version = "1.200719"
description = "A modest config system"
authors = ["Juan-Pablo Scaletti <juanpablo@jpscaletti.com>"]
license = "APACHE-2.0"
readme = "README.md"
repository = "https://github.com/jpsca/properconf"
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers"
]

[tool.poetry.dependencies]
python = "^3.6"
cryptography = "^2.9.2"
pyyaml = "^5.1"
texteditor = "^1.1"
pyceo = "^2.200716"

[tool.poetry.dev-dependencies]
pytest = "^5.4.3"
pytest-cov = "^2.10.0"
flake8 = "^3.8.3"
tox = "^3.17.1"
black = "^19.10b0"

[tool.poetry.scripts]
properconf = "properconf.cli:manager_run"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
