[metadata]
name = properconf
version= 1.200719
url = https://github.com/jpsca/properconf
project_urls =
    Issue tracker = https://github.com/jpsca/properconf/issues
author = Juan-Pablo Scaletti
author_email = juanpablo@jpscaletti.com
classifiers =
    Development Status :: 5 - Production/Stable
    Intended Audience :: Developers
    License :: OSI Approved :: Apache Software License
license = Apache License Version 2.0
license_file = LICENSE
description = A modest config system with encrypted secrets.
long_description = file:README.md
long_description_content_type = text/markdown
keywords =

[options]
packages = find:
include_package_data = true
python_requires = >=3.6,<4.0
install_requires =
    cryptography ~= 2.9
    pyceo ~= 2.200716
    pyyaml ~= 5.1
    texteditor ~= 1.1

[options.packages.find]
exclude =
    tests

[options.extras_require]
test =
    pytest
    pytest-cov

dev =
    black
    flake8
    pytest
    pytest-cov
    tox

[options.entry_points]
console_scripts =
    proper = properconf.cli:manager_run


[flake8]
select =
  B,  # bugbear
  B9,  # bugbear opinionated
  C,  # mccabe, comprehensions, commas
  E,  # pycodestyle errors
  F,  # pyflakes
  G,  # logging format
  I,  # imports
  P,
  Q,  # quotes
  RST,  # rst docstring formatting
  T0,  # print
  T4,  # mypy
  W,  # pycodestyle warnings

ignore =
    W503,  # W503 line break before binary operator
    E203,  # E203 whitespace before ':'

max-complexity = 10
max-line-length = 88

statistics = true
doctests = True
accept-encodings = utf-8

[tool:pytest]
addopts = --doctest-modules
