[metadata]
name = properconf
version= 2.201205
url = https://github.com/jpsca/properconf
project_urls =
    Issue tracker = https://github.com/jpsca/properconf/issues
author = Juan-Pablo Scaletti
author_email = juanpablo@jpscaletti.com
classifiers =
    Development Status :: 5 - Production/Stable
    Intended Audience :: Developers
    License :: OSI Approved :: Apache Software License
license = Apache License Version 2.0
license_file = LICENSE
description = A modest config system with encrypted secrets.
long_description = file:README.md
long_description_content_type = text/markdown
keywords =

[options]
packages = find:
include_package_data = true
python_requires = >=3.6,<4.0
install_requires =
    cryptography >=2.9,<4.0
    pyceo ~=2.200716
    texteditor ~=1.3
    toml >=0.10.2,<2.0

[options.packages.find]
exclude =
    tests

[options.extras_require]
test =
    pytest
    pytest-cov

dev =
    black
    flake8
    pytest
    pytest-cov
    tox

[options.entry_points]
console_scripts =
    conf = properconf.cli:manager_run

[flake8]
application-package-names = properconf
application-import-names = properconf
import-order-style = pycharm

select =
  B,  # bugbear
  C,  # mccabe, comprehensions, commas
  E,  # pycodestyle errors
  F,  # pyflakes
  G,  # logging format
  I,  # imports
  P,
  Q,  # quotes
  T4,  # mypy
  W,  # pycodestyle warnings

ignore =
    W503,  # W503 line break before binary operator
    E203,  # E203 whitespace before ':'
    E501,

max-line-length = 98
max-complexity = 10

inline-quotes = double
multiline-quotes = double
docstring-quotes = double

exclude =
  .git,
  .venv
  __pycache__,
  conftest.py,
  docs,

[tool:pytest]
addopts = --doctest-modules

